# TBAKelompok

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: App.cpp  App.h  Core.h  main.cpp
src/Automata/: AutomataState.cpp  AutomataState.h  NFA.cpp  NFA.h  State.cpp  State.h
src/Components/: BaseComponent.cpp  BaseComponent.h  Button.cpp  Button.h  GridLayout.cpp  GridLayout.h  InputText.cpp  InputText.h  InputToaster.cpp  InputToaster.h  OptionLayout.cpp  OptionLayout.h
src/Core/: Delegate.h
src/Pages/: BaseAutomataPage.cpp  BaseAutomataPage.h  BasePage.cpp  BasePage.h  MainPage.cpp  MainPage.h  NumFourPage.cpp  NumFourPage.h  NumOnePage.cpp  NumOnePage.h
src/Shapes/: RoundedRectangleShape.cpp  RoundedRectangleShape.h
